objects/vlocity_ins__VqResource__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__ActivityData__c</fullName>
        <label>Activity Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataSourceType__c</fullName>
        <label>Data Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>Query</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataSource__c</fullName>
        <label>Data Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Headline__c</fullName>
        <label>Headline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LinkedProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Vlocity Intelligence Resources</relationshipLabel>
        <relationshipName>Vlocity_Intelligence_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubTitle__c</fullName>
        <label>Sub-Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetObjectKey__c</fullName>
        <label>Target Object Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TargetObjectType__c</fullName>
        <label>Target Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Intelligence Resource</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vlocity Intelligence Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Intelligence Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>